CHANGES-1.2.txt
---------------

CHANGES IN CUPS V1.2.12

	- The image/tiff file matching rule incorrectly identified
	  some text files as TIFF files (STR #2431)
	- The filter(7) man page incorrectly documented the
	  "PAGE: total #-pages" message (STR #2427)
	- PCL text files were mis-identified as HP-GL/2 and
	  caused the HP-GL/2 filter to hang (STR #2423)
	- When printing to a queue with user ACLs, the scheduler
	  incorrectly returned a quota error instead of a "not
	  allowed to print" error (STR #2409)
	- cupsaddsmb could get in a loop if no printer drivers
	  were installed (STR #2407)
	- cupsRasterReadHeader() did not byte-swap the header
	  properly when compiled with certain versions of GCC.
	- The IPP backend did not send the document-format
	  attribute for filtered jobs (STR #2411)
	- Some PPD files could cause a crash in ppdOpen2 (STR
	  #2408)
	- The web admin interface incorrectly handled the "share
	  printers" and "show remote printers" settings (STR
	  #2393)
	- The scheduler's log messages about AuthClass and
	  AuthGroupName advised using a replacement directive but
	  had the wrong syntax (STR #2400)
	- Updated the PostScript/PJL and HP-GL/2 MIME rules to
	  look in the first 4k of the file, not just the first 1k
	  (STR #2386)
	- Updated the Italian localization (STR #2382)


CHANGES IN CUPS V1.2.11

	- Fixed the "relaying from" log message (STR #2376)
	- Updated the launchd support on Mac OS X to better
	  support reconfiguration.
	- "make distclean" didn't remove all generated files
	  (STR #2366)
	- Fixed a bug in the advertisement of classes (STR
	  #2373)
	- The IPP backend now stays running until the job is
	  actually printed by the remote server; previously
	  it would stop monitoring the job if it was held or
	  temporarily stopped (STR #2352)
        - PDF files were not always printed using the correct
          orientation (STR #2348)
        - The scheduler could crash if you specified a bad file: